Change log for zeit.web
=======================

2.17 (unreleased)
-----------------

- MAINT: Tweak ze.tt parquet area



2.16 (2015-10-22)
-----------------

- ZON-2276: Fold/unfold comment replies

- ZON-2144: Add service link module (in fact add raw to centerpages)

- ZON-2334: Unbearbeitete Printartikel von der chronologischen Navigation
  ausschliessen

- ZON-1944: Implement Jobbox

- ZON-2060: Verlagsangebotskennzeichung in Hauptnavi

- Fix: Change number of jobs to be displayed in Jobbox

- Fix: Squeeze adplace ZMO mobile 8 by 2.5em width

- MAINT: Normalize spektrum teaser and parquet


2.15 (2015-10-20)
-----------------

- ZON-2206: Check whether an advertisement-nextread exists for the article's
  (sub)ressort and render it

- ZON-2277: Show origin for answer comments

- ZON-1937: Add ze.tt parquet

- ZON-2288: Generalize RSS content sources for ze.tt and spektrum

- ZON-1191: Implement the mighty ZEIT Shop Homepage area

- ZON-2273: Turn off zeit.de/beta

- ZON-2036: Bildrechte im Footer von CPs

- ZON-2303: Set caching header for login-state

- MAINT: Remove obsolete sso_activate option from login view

- FIX: Fix display of future dates

- ZON-2329: do not show article-lineage on iPad


2.14.1 (2015-10-15)
-------------------

- FIX: Fix lazy loading images initial

- ZON-2321: Nächster-Artikel-Pfeile von Advertorials ausschließen


2.14 (2015-10-15)
-----------------

- ZON-1975: Update ZMO parquet style

- ZON-2292: Add lazyloading for centerpages

- ZON-2318: Fallback für Related mit unveröffentlichtem/fehlendem Bild

- MAINT: Animate chronological article navigation

- MAINT: Fix video preloading (because it costs too much money)

- MAINT: Fix adcontroller handle in ZMO galleries


2.13.3 (2015-10-14)
-------------------

- MAINT: update DNS Prefetch to actually used hosts

- MAINT: Exclude ZMO from article lineage query

- MAINT: Adjust adBlocker Tracking to GTM dataLayer conventions


2.13.2 (2015-10-14)
-------------------
