@@ -1,0 +1,100 @@
+<?xml version='1.0' encoding='UTF-8'?>
+<article xmlns:py="http://codespeak.net/lxml/objectify/pytype">
+  <head>
+    <author expires="" href="http://xml.zeit.de/autoren/H/Wenke_Husmann/index.xml" publication-date="">
+      <display_name py:pytype="str">Wenke Husmann</display_name>
+    </author>
+    <image align="left" base-id="http://xml.zeit.de/zeit-online/image/filmstill-hobbit-schlacht-fuenf-hee/" expires="2015-03-03T12:43:31+00:00" publication-date="" type="jpg">
+      <bu py:pytype="str">Handlung, wohin man auch schaut in dieser Szene aus dem letzten Hobbit-Teil &quot;Die Schlacht der fünf Heere&quot;</bu>
+      <copyright py:pytype="str">© Warner Bros.</copyright>
+    </image>
+    <rankedTags>
+      <tag score="5" type="topic" url_value="film" uuid="3b2d448a-00a7-4b1b-9235-8503207e01d9">Film</tag>
+      <tag score="6" type="Person" url_value="peter-jackson" uuid="ddca42b6-dc03-48ce-9c80-26678846b591">Peter Jackson</tag>
+      <tag score="3" type="Location" url_value="neuseeland" uuid="423373fa-835a-49a0-96e0-c94318a5b0ad">Neuseeland</tag>
+      <tag score="5" type="Person" url_value="steven-spielberg" uuid="47df43f9-b803-43dc-b2e1-475886cddeb7">Steven Spielberg</tag>
+      <tag score="4" type="Person" url_value="christopher-nolan" uuid="4bee0550-8a49-4070-add5-a7069f5df2c6">Christopher Nolan</tag>
+      <tag score="4" type="Person" url_value="ridley-scott" uuid="096c6141-d20c-4b14-9ee1-3824560be7d0">Ridley Scott</tag>
+    </rankedTags>
+    <references>
+      <reference type="intern" href="http://xml.zeit.de/zeit-online/article/01" contenttype="article" />
+    </references>
+    <attribute name="DailyNL" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">yes</attribute>
+    <attribute name="artbox_thema" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">no</attribute>
+    <attribute name="author" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">Wenke Husmann</attribute>
+    <attribute name="banner" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">yes</attribute>
+    <attribute name="breaking_news" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">no</attribute>
+    <attribute name="channels" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">Kultur Film</attribute>
+    <attribute name="color_scheme" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">Redaktion</attribute>
+    <attribute name="comments" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">yes</attribute>
+    <attribute name="corrected" ns="http://namespaces.zeit.de/CMS/workflow" py:pytype="str">yes</attribute>
+    <attribute name="countings" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">yes</attribute>
+    <attribute name="date-last-modified" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">2014-12-09T09:23:57.105802+00:00</attribute>
+    <attribute name="date_first_released" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">2014-12-05T17:12:24.668544+00:00</attribute>
+    <attribute name="date_last_checkout" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">2014-12-09T09:32:11.073684+00:00</attribute>
+    <attribute name="date_last_published" ns="http://namespaces.zeit.de/CMS/workflow" py:pytype="str">2014-12-09T09:24:56.823418+00:00</attribute>
+    <attribute name="date_last_published_semantic" ns="http://namespaces.zeit.de/CMS/workflow" py:pytype="str">2014-12-05T17:11:30.179510+00:00</attribute>
+    <attribute name="edited" ns="http://namespaces.zeit.de/CMS/workflow" py:pytype="str">yes</attribute>
+    <attribute name="executable" ns="http://apache.org/dav/props/" py:pytype="str">F</attribute>
+    <attribute name="export_cds" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">yes</attribute>
+    <attribute name="foldable" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">yes</attribute>
+    <attribute name="genre" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">glosse</attribute>
+    <attribute name="has_recensions" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">no</attribute>
+    <attribute name="in_rankings" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">yes</attribute>
+    <attribute name="is_content" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">yes</attribute>
+    <attribute name="last-semantic-change" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">2014-12-05T17:11:22.109311+00:00</attribute>
+    <attribute name="last_modified_by" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">ldap.lavrov</attribute>
+    <attribute name="lead_candidate" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">no</attribute>
+    <attribute name="minimal_header" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">no</attribute>
+    <attribute name="previous_uniqueIds" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">http://xml.zeit.de/kultur/film/2014-12/15a48f2c-82b0-4136-b4aa-ad3f57ff2fa0.tmp</attribute>
+    <attribute name="product-id" ns="http://namespaces.zeit.de/CMS/workflow" py:pytype="str">ZEDE</attribute>
+    <attribute name="public_token" ns="http://namespaces.zeit.de/CMS/vgwort" py:pytype="str">980d578641cd444aa69700ed11b21d63</attribute>
+    <attribute name="published" ns="http://namespaces.zeit.de/CMS/workflow" py:pytype="str">yes</attribute>
+    <attribute name="push_news" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">no</attribute>
+    <attribute name="rebrush_website_content" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">no</attribute>
+    <attribute name="ressort" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">Administratives</attribute>
+    <attribute name="seo_optimized" ns="http://namespaces.zeit.de/CMS/workflow" py:pytype="str">yes</attribute>
+    <attribute name="show_commentthread" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">yes</attribute>
+    <attribute name="status" ns="http://namespaces.zeit.de/CMS/workflow" py:pytype="str">OK</attribute>
+    <attribute name="sub_ressort" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">Film</attribute>
+    <attribute name="text-length" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">5010</attribute>
+    <attribute name="type" ns="http://namespaces.zeit.de/CMS/meta" py:pytype="str">article</attribute>
+    <attribute name="urgent" ns="http://namespaces.zeit.de/CMS/workflow" py:pytype="str">no</attribute>
+    <attribute name="uuid" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">{urn:uuid:9e7bf051-2299-43e4-b5e6-1fa81d097dbd}</attribute>
+    <attribute name="volume" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">49</attribute>
+    <attribute name="year" ns="http://namespaces.zeit.de/CMS/document" py:pytype="str">2014</attribute>
+    <attribute name="provides" ns="http://namespaces.zeit.de/CMS/meta" py:pytype="str">&lt;pickle&gt;
+  &lt;initialized_object&gt;
+    &lt;klass&gt;
+      &lt;global name=&quot;Provides&quot; module=&quot;zope.interface.declarations&quot;/&gt;
+    &lt;/klass&gt;
+    &lt;arguments&gt;
+      &lt;tuple&gt;
+        &lt;global name=&quot;Article&quot; module=&quot;zeit.content.article.article&quot;/&gt;
+        &lt;global name=&quot;Interface&quot; module=&quot;zope.interface&quot;/&gt;
+        &lt;global name=&quot;IZONContent&quot; module=&quot;zeit.cms.section.interfaces&quot;/&gt;
+        &lt;global name=&quot;IZONArticle&quot; module=&quot;zeit.content.article.interfaces&quot;/&gt;
+      &lt;/tuple&gt;
+    &lt;/arguments&gt;
+  &lt;/initialized_object&gt;
+&lt;/pickle&gt;</attribute>
+  </head>
+  <body>
+    <title>Zwei Baguettes und ein Zimmer bitte</title>
+    <subtitle>Die spanische Budgetkette Praktik hat zwei Themenhotels in Barcelona eröffnet. Das Bakery überlässt die Lobby einer stadtbekannten Bäckerei.</subtitle>
+    <byline>von Barbara Baumgartner</byline>
+    <division type="page">
+      <image align="left" alt="Neuseeland, Steven Spielberg, Christopher Nolan, Ridley Scott" alt_local="Neuseeland, Steven Spielberg, Christopher Nolan, Ridley Scott" expires="2015-03-03T12:43:31+00:00" is_empty="False" layout="large" publication-date="" src="http://xml.zeit.de/exampleimages/artikel/advertorial-01/wochenmarkt-43.jpg" title="Handlung, wohin man auch schaut in dieser Szene aus dem letzten Hobbit-Teil &quot;Die Schlacht der fünf Heere&quot;" title_local="Handlung, wohin man auch schaut in dieser Szene aus dem letzten Hobbit-Teil &quot;Die Schlacht der fünf Heere&quot;" type="jpg">
+        <bu py:pytype="str">Mit großem Abstand gewinnt übrigens Lionel Messi diese Einzelwertung.</bu>
+        <copyright py:pytype="str">© Warner Bros.</copyright>
+      </image>
+      <p>Es fällt auf, dass in Barcelona das Dribbling ein wichtiges Stilmittel ist (189 erfolgreiche). Mit großem Abstand gewinnt übrigens Lionel Messi diese Einzelwertung (71). Seine Alleingänge schaffen Raum für die Mitspieler. Weil sie trotzdem oft den Ball besitzen, zeigt das: Sie passen öfter, spielen lieber ab.</p>
+      <p>Es fällt auf, dass in Barcelona das Dribbling ein wichtiges Stilmittel ist (189 erfolgreiche). Mit großem Abstand gewinnt übrigens Lionel Messi diese Einzelwertung (71). Seine Alleingänge schaffen Raum für die Mitspieler. Weil sie trotzdem oft den Ball besitzen, zeigt das: Sie passen öfter, spielen lieber ab.</p>
+    </division>
+  </body>
+  <teaser>
+    <title>Zwei Baguettes und ein Zimmer bitte</title>
+    <text>Die spanische Budgetkette Praktik hat zwei Themenhotels in Barcelona eröffnet. Das Bakery überlässt die Lobby einer stadtbekannten Bäckerei.</text>
+    <supertitle>Praktik Bakery Barcelona</supertitle>
+  </teaser>
+</article>
