@@ -1,0 +1,68 @@
+<?xml version="1.0"?>
+<head xmlns:D="DAV:" xmlns:ns3="http://namespaces.zeit.de/CMS/tagging">
+  <attribute ns="DAV:" name="href">/cms/work/kultur/film/2014-12/hobbit-monumentalfilm</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="date_last_published_semantic">2014-12-05T17:11:30.179510+00:00</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="text-length">5010</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="lead_candidate">no</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/meta" name="provides">&lt;pickle&gt; &lt;initialized_object&gt; &lt;klass&gt; &lt;global name="Provides" module="zope.interface.declarations"/&gt; &lt;/klass&gt; &lt;arguments&gt; &lt;tuple&gt; &lt;global name="Article" module="zeit.content.article.article"/&gt; &lt;global name="Interface" module="zope.interface"/&gt; &lt;global name="IZONContent" module="zeit.cms.section.interfaces"/&gt; &lt;global name="IZONArticle" module="zeit.content.article.interfaces"/&gt; &lt;/tuple&gt; &lt;/arguments&gt; &lt;/initialized_object&gt; &lt;/pickle&gt;</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="status">OK</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="color_scheme">Redaktion</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="breaking_news">no</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="push_news">no</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="author">Wenke Husmann</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="countings">yes</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="DailyNL">yes</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="foldable">yes</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/tagging" name="pinned"/>
+  <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="seo_optimized">yes</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="is_content">yes</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="in_rankings">yes</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="channels">Kultur Film</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="volume">49</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="last-semantic-change">2014-12-05T17:11:22.109311+00:00</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="year">2014</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="last_modified_by">ldap.lavrov</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/meta" name="type">article</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="uuid">{urn:uuid:21da7127-f585-49ed-b4c6-200c7a1f7fea}</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="edited">yes</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/vgwort" name="private_token">5dc3d7bc15ba46ca934f0eb82951d22b</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="product-id">ZEDE</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="published">yes</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="export_cds">yes</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/vgwort" name="reported_error"/>
+  <attribute ns="http://namespaces.zeit.de/CMS/vgwort" name="public_token">980d578641cd444aa69700ed11b21d63</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="genre">glosse</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/tagging" name="disabled"/>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="date-last-modified">2014-12-09T09:32:11.239437+00:00</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="urgent">no</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="banner">yes</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/tagging" name="rankedTags">FilmPeter JacksonNeuseelandSteven SpielbergChristopher NolanRidley Scott</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="comments">yes</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="date_last_checkout">2014-12-09T09:32:11.073684+00:00</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="show_commentthread">yes</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="previous_uniqueIds">http://xml.zeit.de/kultur/film/2014-12/15a48f2c-82b0-4136-b4aa-ad3f57ff2fa0.tmp</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="rebrush_website_content">no</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="date_last_published">2014-12-09T09:24:56.823418+00:00</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="ressort">Administratives</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="sub_ressort">Film</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="corrected">yes</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="minimal_header">no</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="artbox_thema">no</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="date_first_released">2014-12-05T17:12:24.668544+00:00</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="has_recensions">no</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/vgwort" name="reported_on">2014-12-13T00:51:38.353076+00:00</attribute>
+  <attribute ns="DAV:" name="resourcetype"/>
+  <attribute ns="DAV:" name="creationdate">2014-12-09T09:32:11Z</attribute>
+  <attribute ns="DAV:" name="getcontentlength">19673</attribute>
+  <attribute ns="DAV:" name="getlastmodified">Tue, 09 Dec 2014 09:32:11 GMT</attribute>
+  <attribute ns="DAV:" name="getetag">"12a4da2-4cd9-509c537b3ffb2"</attribute>
+  <attribute ns="http://apache.org/dav/props/" name="executable">F</attribute>
+  <attribute ns="DAV:" name="supportedlock"> </attribute>
+  <attribute ns="DAV:" name="lockdiscovery"/>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="tldr_date">2015-01-25T11:00:00+00:00</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="tldr_milestone">yes</attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="tldr_text">
+  Erstmals seit Ende der Diktatur 1974 in Griechenland gewinnt eine andere als die beiden etablierten Parteien die Parlamentswahl: Das Linksbündnis Syriza und ihr Anführer Alexis Tsipras übernehmen die Macht. An diesen Wahlsieg knüpfen nicht nur viele Griechen ihre Hoffnung auf ein Ende der Krise, selbst in der EU verspricht sich so mancher nun mehr Reformbereitschaft vor allem in der Korruptionsfrage.
+  </attribute>
+  <attribute ns="http://namespaces.zeit.de/CMS/document" name="tldr_title">Syriza und Tsipras gewinnen die Parlamentswahl</attribute>
+</head>
