@@ -1049,6 +1049,11 @@ def test_article_lineage_should_not_render_on_articles_without_channels(
     assert len(browser.cssselect('.article-lineage')) == 0
 
 
+def test_article_lineage_should_not_render_on_administratives(testbrowser):
+    browser = testbrowser('/zeit-online/article/administratives')
+    assert len(browser.cssselect('.article-lineage')) == 0
+
+
 def test_advertisement_nextread_should_render_after_nextread(
         testbrowser, workingcopy):
     article = zeit.cms.interfaces.ICMSContent(
